--- a/index.html
+++ b/index.html
@@ -1,20 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-
-    <script src="https://cdn.tailwindcss.com"></script>
+    <title>Vite + React</title>
   </head>
-  <body
-    class="bg-slate-900 text-slate-400 flex items-center justify-center h-screen px-10"
-  >
+  <body>
     <div id="root"></div>
-
-    <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-    <script type="text/babel" src="./main.js"></script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
